fixed unaligned header

--- a/frontend/src/app/components/navigation-menu/navigation-menu.component.scss
+++ b/frontend/src/app/components/navigation-menu/navigation-menu.component.scss
@@ -16,11 +16,6 @@
   cursor: pointer;
 }
 
-#navigation-toolbar div div:nth-child(2) {
-  float: left;
-  margin-left: 15px;
-}
-
 #sidenav-container {
   position: fixed;
   height: 100%;
